--- a/index.html
+++ b/index.html
@@ -299,6 +299,15 @@
                         </a>
                     </div>
                 </div>
+                <div class="proyecto">
+                    <img src="img/p7.jpg" alt="space-shooter">
+                    <div class="overlay">
+                        <h3>Video Juego Space-Shooter</h3>
+                        <a href="https://github.com/Luiso-o/Space-Shooter" class="enlace" target="_blank">
+                            <p>Video Juego del espacio creado en Python con la libreria pygame.</p>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -325,7 +334,7 @@
                         <ul>
                             <li>
                                 <i class="fa-solid fa-location-dot"></i>
-                                Avenida Cerdanyola, Sant Gugat del Valles
+                                Sant Gugat del Valles
                             </li>
                             <li>
                                 <i class="fa-solid fa-mobile-screen"></i>
