--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Luis Trujillo</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="shortcut icon" href="img/maletin.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -329,20 +330,20 @@
                 </div>
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="img/ubicacion.png" alt="mapa" class="map">
+                    <img src="img/ubicacion.jpg" alt="mapa" class="map">
                     <div class="info">
                         <ul>
                             <li>
                                 <i class="fa-solid fa-location-dot"></i>
-                                Sant Gugat del Valles
+                                Sant Gugat del Valles/Barcelona
                             </li>
                             <li>
                                 <i class="fa-solid fa-mobile-screen"></i>
-                                Llamame: 657 626 639
+                                +34 657 626 639 
                             </li>
                             <li>
                                 <i class="fa-solid fa-envelope"></i>
-                                Email: cheportillo@gmail.com
+                                cheportillo@gmail.com
                             </li>
                         </ul>
                     </div>
