--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">Luis</a>
+                <a href="#">HELLO WORLD!</a>
             </div>
             <nav id="nav">
                 <ul>
@@ -26,7 +26,6 @@
                     <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
                     <li><a href="#skills" onclick="seleccionar()">SKILLS</a></li>
                     <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
-                    <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
                 </ul>
             </nav>
             <div class="nav-responsive" onclick="mostrarOcultarMenu()">
@@ -39,10 +38,10 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="img/hero.png" alt="">
+                <img src="img/presentacion.png" alt="">
             </div>
             <h1>Luis Trujillo</h1>
-            <h2>Web developer - Java/Angular</h2>
+            <h2 id="web-developer-text">Web developer.</h2>
             <div class="redes">
                 <a href="https://github.com/Luiso-o" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/luistrujilloportillo/" target="_blank"><i
@@ -63,71 +62,6 @@
                 desarrollo Frontend. Con un enfoque centrado en la resolución de problemas y la mejora continua, estoy
                 emocionado por enfrentar nuevos desafíos y contribuir al mundo del desarrollo web. ¡Vamos a crear cosas
                 increíbles juntos!</p>
-
-            <div class="fila">
-                <!-- datos personales -->
-                <div class="col">
-                    <h3>Datos Personales</h3>
-                    <ul>
-                        <li>
-                            <strong>Teléfono</strong>
-                            +34 657 626 639
-                        </li>
-                        <li>
-                            <strong>Email</strong>
-                            cheportillo@gmail.com
-                        </li>
-                        <li>
-                            <strong>Repositorio</strong>
-                            github.com/Luiso-o
-                        </li>
-                        <li>
-                            <strong>Dirección</strong>
-                            08172 Barcelona, España
-                        </li>
-                        <li>
-                            <strong>Cargo</strong>
-                            <span>OPEN TO WORK</span>
-                        </li>
-                    </ul>
-                </div>
-
-                <!-- intereses -->
-                <div class="col">
-                    <h3>Intereses</h3>
-                    <div class="contenedor-intereses">
-
-                        <div class="interes">
-                            <i class="fa-solid fa-headphones"></i>
-                            <span>MUSICA</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-plane"></i>
-                            <span>VIAJAR</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-brands fa-windows"></i>
-                            <span>WINDOWS</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-person-hiking"></i>
-                            <span>DEPORTE</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-dog"></i>
-                            <span>MASCOTAS</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-camera"></i>
-                            <span>FOTOS</span>
-                        </div>
-                        <div class="interes">
-                            <i class="fa-solid fa-microchip"></i>
-                            <span>TECNOLOGIA</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
             <a href="document/CV.pdf" download="Luis_Trujillo_CV" class="enlace">
                 <button>
@@ -159,7 +93,7 @@
                         <span>HTML & CSS</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>80%</span>
+                                <span>85%</span>
                             </div>
                         </div>
                     </div>
@@ -167,7 +101,7 @@
                         <span>JavasCript</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>75%</span>
+                                <span>85%</span>
                             </div>
                         </div>
                     </div>
@@ -183,7 +117,7 @@
                         <span>Python</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>55%</span>
+                                <span>75%</span>
                             </div>
                         </div>
                     </div>
@@ -244,108 +178,94 @@
                 <div class="proyecto">
                     <img src="img/p1.jpg" alt="logo it academy">
                     <div class="overlay">
-                        <h3>Ita Challenge</h3>
+                        <h3>Ita Challenge</h3><br>
                         <a href="https://github.com/IT-Academy-BCN/ita-challenges-backend" class="enlace"
                             target="_blank">
                             <p>Colaboré en la creación del backend de "IT Academy Challenges", permitiendo a estudiantes
                                 resolver desafíos de programación.</p>
                         </a>
+                        <div class="icons-container">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png" alt="icon java">
+                        </div> 
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="img/p2.jpg" alt=" logo ajunt map">
                     <div class="overlay">
-                        <h3>Hackathon Jump2Digital</h3>
+                        <h3>Hackathon Jump2Digital</h3><br>
                         <a href="https://github.com/PauSansa/jump2backend-2" class="enlace" target="_blank">
                             <p>Proyecto finalista, aplicación que muestra el promedio económico histórico de Barcelona.
                             </p>
                         </a>
+                        <div class="icons-container">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png" alt="icon java">
+                            <img class="icons" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/512px-Angular_full_color_logo.svg.png" alt="angular icon">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968332.png" alt="php icon">
+                        </div>
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="img/p3.jpg" alt=" logo floristeria" style="background-color: rgb(227, 255, 85);">
                     <div class="overlay">
-                        <h3>Api Floristeria</h3>
+                        <h3>Api Floristeria</h3><br>
                         <a href="https://github.com/Luiso-o/Api_Floristeria_microservices" class="enlace"
                             target="_blank">
                             <p>CRUD para gestionar diferentes floristerias y sus stocks, usando programacíon reactiva.
                             </p>
                         </a>
+                        <div class="icons-container">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png" alt="icon java">
+                        </div>
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="img/p4.jpg" alt="logo users">
                     <div class="overlay">
-                        <h3>Backend Python</h3>
+                        <h3>Backend Python</h3><br>
                         <a href="https://github.com/Luiso-o/API-CRUD-FASTAPI" class="enlace" target="_blank">
                             <p>App CRUD gestión de usuarios usando Python como lenguaje y FastApi como FrameworK.</p>
                         </a>
+                        <div class="icons-container">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1822/1822899.png" alt="icon python">
+                        </div>
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="img/p5.jpg" alt="logo juego de dados">
                     <div class="overlay">
-                        <h3>Api Juego de dados</h3>
+                        <h3>Api Juego de dados</h3><br>
                         <a href="https://github.com/Luiso-o/JuegoDeDados_PrimeraFase" class="enlace" target="_blank">
                             <p>Proyecto final, Gestion de jugadores en juego de azar.</p>
                         </a>
-                    </div>
-                </div>
-                <div class="proyecto">
-                    <img src="img/p6.jpg" alt="logo ecomerce">
-                    <div class="overlay">
-                        <h3>Creación de un e-Comerce</h3>
-                        <a href="https://github.com/Luiso-o/Ejercicio-S2.2.-E-commerce/tree/main" class="enlace" target="_blank">
-                            <p>Creación de una interfaz de usuario para la gestion de compras online.</p>
-                        </a>
+                        <div class="icons-container">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png" alt="icon java">
+                        </div>
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="img/p7.jpg" alt="space-shooter">
                     <div class="overlay">
-                        <h3>Video Juego Space-Shooter</h3>
+                        <h3>Video Juego Space-Shooter</h3><br>
                         <a href="https://github.com/Luiso-o/Space-Shooter" class="enlace" target="_blank">
                             <p>Video Juego del espacio creado en Python con la libreria pygame.</p>
                         </a>
+                        <div class="icons-container">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1822/1822899.png" alt="icon python">
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- SECCION CONTACTO -->
-    <section id="contacto" class="contacto">
-        <div class="contenido-seccion">
-            <h2>CONTACTO</h2>
-            <div class="fila">
-                <!-- Formulario -->
-                <div class="col">
-                    <input type="text" id="nombre" placeholder="Tú Nombre">
-                    <input type="tel" id="telefono" placeholder="Número telefónico">
-                    <textarea name="" id="mensaje" cols="30" rows="10" style="resize: none;" placeholder="Mensaje"></textarea>
-                    <button onclick="enviarWhatsapp()">
-                        Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
-                        <span class="overlay"></span>
-                    </button>
-                </div>
-                <!-- Mapa -->
-                <div class="col">
-                    <img src="img/ubicacion.jpg" alt="mapa" class="map">
-                    <div class="info">
-                        <ul>
-                            <li>
-                                <i class="fa-solid fa-location-dot"></i>
-                                Sant Gugat del Valles/Barcelona
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-mobile-screen"></i>
-                                +34 657 626 639 
-                            </li>
-                            <li>
-                                <i class="fa-solid fa-envelope"></i>
-                                cheportillo@gmail.com
-                            </li>
-                        </ul>
+                <div class="proyecto">
+                    <img src="img/p8.jpg" alt="clima-app">
+                    <div class="overlay">
+                        <h3>Aplicacion del clima</h3><br>
+                        <a href="https://luiso-o.github.io/Aplicacion-del-clima/" class="enlace" target="_blank">
+                            <p>Aplicación para consultar el clima de tu zona usando geolocalización.</p>
+                        </a>
+                        <div class="icons-container">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/11516/11516140.png" alt="html icon">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/732/732190.png" alt="css icon">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1199/1199124.png" alt="JS icon ">
+                        </div>
                     </div>
                 </div>
             </div>
