--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="CSS/estilo.css">
+    <link rel="stylesheet" href="CSS/barraMenu.css">
     <link rel="shortcut icon" href="img/maletin.jpg" type="image/x-icon">
 </head>
 
 <body>
-    <!-- MENU ENCABEZADO -->
+    <!-- SECCION MENU ENCABEZADO -->
     <div class="contenedor-header">
         <header>
-            <div class="logo">
-                <a href="#">HELLO WORLD!</a>
+            <div class="logo">Hello World!
             </div>
             <nav id="nav">
                 <ul>
