--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="CSS/estilo.css">
+    <title>Wellcome :D</title>
+    <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/barraMenu.css">
+    <link rel="stylesheet" href="CSS/inicio.css">
     <link rel="shortcut icon" href="img/maletin.jpg" type="image/x-icon">
 </head>
 
 <body>
-    <!-- SECCION MENU ENCABEZADO -->
+    <!-- SECCION MENU -->
     <div class="contenedor-header">
         <header>
             <div class="logo">Hello World!
@@ -38,7 +39,7 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="img/presentacion.png" alt="">
+                <img src="img/presentacion.png" alt="imagen de presentacion" loading="lazy">
             </div>
             <h1>Luis Trujillo</h1>
             <h2 id="web-developer-text">Web developer.</h2>
