--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/barraMenu.css">
     <link rel="stylesheet" href="CSS/inicio.css">
+    <link rel="stylesheet" href="CSS/sobreMi.css">
     <link rel="shortcut icon" href="img/maletin.jpg" type="image/x-icon">
 </head>
 
@@ -56,7 +57,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Luis Trujillo.</span> Soy un apasionado desarrollador web Backend con experiencia en
+            <p> Soy un apasionado desarrollador web Backend con experiencia en
                 tecnologías como Java y Python. Mi conjunto de habilidades también incluye el uso de JUnit para pruebas,
                 Docker para la gestión de contenedores y la manipulación eficiente de bases de datos. Actualmente, me
                 encuentro inmerso en el mundo de Angular como estudiante, buscando ampliar mis conocimientos en el
@@ -64,15 +65,13 @@
                 emocionado por enfrentar nuevos desafíos y contribuir al mundo del desarrollo web. ¡Vamos a crear cosas
                 increíbles juntos!</p>
 
-            <a href="document/CV.pdf" download="Luis_Trujillo_CV" class="enlace">
-                <button>
-                    Descargar CV <i class="fa-solid fa-download"></i>
-                    <span class="overlay"></span>
-                </button>
+            <!-- Botón de Descarga mejorado -->
+            <a href="document/CV.pdf" download="Luis_Trujillo_CV" class="btn-descarga">
+                Descargar CV <i class="fa-solid fa-download"></i>
             </a>
-
         </div>
     </section>
+
 
     <!-- SECCION SKILLS -->
     <section class="skills" id="skills">
@@ -186,8 +185,9 @@
                                 resolver desafíos de programación.</p>
                         </a>
                         <div class="icons-container">
-                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png" alt="icon java">
-                        </div> 
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png"
+                                alt="icon java">
+                        </div>
                     </div>
                 </div>
                 <div class="proyecto">
@@ -199,9 +199,13 @@
                             </p>
                         </a>
                         <div class="icons-container">
-                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png" alt="icon java">
-                            <img class="icons" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/512px-Angular_full_color_logo.svg.png" alt="angular icon">
-                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968332.png" alt="php icon">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png"
+                                alt="icon java">
+                            <img class="icons"
+                                src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/512px-Angular_full_color_logo.svg.png"
+                                alt="angular icon">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968332.png"
+                                alt="php icon">
                         </div>
                     </div>
                 </div>
@@ -215,7 +219,8 @@
                             </p>
                         </a>
                         <div class="icons-container">
-                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png" alt="icon java">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png"
+                                alt="icon java">
                         </div>
                     </div>
                 </div>
@@ -227,7 +232,8 @@
                             <p>App CRUD gestión de usuarios usando Python como lenguaje y FastApi como FrameworK.</p>
                         </a>
                         <div class="icons-container">
-                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1822/1822899.png" alt="icon python">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1822/1822899.png"
+                                alt="icon python">
                         </div>
                     </div>
                 </div>
@@ -239,7 +245,8 @@
                             <p>Proyecto final, Gestion de jugadores en juego de azar.</p>
                         </a>
                         <div class="icons-container">
-                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png" alt="icon java">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png"
+                                alt="icon java">
                         </div>
                     </div>
                 </div>
@@ -251,7 +258,8 @@
                             <p>Video Juego del espacio creado en Python con la libreria pygame.</p>
                         </a>
                         <div class="icons-container">
-                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1822/1822899.png" alt="icon python">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1822/1822899.png"
+                                alt="icon python">
                         </div>
                     </div>
                 </div>
@@ -263,9 +271,12 @@
                             <p>Aplicación para consultar el clima de tu zona usando geolocalización.</p>
                         </a>
                         <div class="icons-container">
-                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/11516/11516140.png" alt="html icon">
-                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/732/732190.png" alt="css icon">
-                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1199/1199124.png" alt="JS icon ">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/11516/11516140.png"
+                                alt="html icon">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/732/732190.png"
+                                alt="css icon">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/1199/1199124.png"
+                                alt="JS icon ">
                         </div>
                     </div>
                 </div>
