--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="CSS/barraMenu.css">
     <link rel="stylesheet" href="CSS/inicio.css">
     <link rel="stylesheet" href="CSS/sobreMi.css">
+    <link rel="stylesheet" href="CSS/skills.css">
+    <link rel="stylesheet" href="CSS/portafolio.css">
+    <link rel="stylesheet" href="CSS/footer.css">
     <link rel="shortcut icon" href="img/maletin.jpg" type="image/x-icon">
 </head>
 
