--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Wellcome :D</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/barraMenu.css">
     <link rel="stylesheet" href="CSS/inicio.css">
     <link rel="stylesheet" href="CSS/sobreMi.css">
