--- a/index.html
+++ b/index.html
@@ -283,6 +283,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="proyecto">
+                    <img src="img/p9.jpg" alt="clima-app">
+                    <div class="overlay">
+                        <h3>Flappy Bird</h3><br>
+                        <a href="https://github.com/Luiso-o/Flappy_Bird/tree/main" class="enlace" target="_blank">
+                            <p>Desarrollé mi versión del famoso video juego Flappy Bird usando las librerias awt y swing de Java</p>
+                        </a>
+                        <div class="icons-container">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png"
+                            alt="icon java">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
