--- a/index.html
+++ b/index.html
@@ -296,6 +296,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="proyecto">
+                    <video controls autoplay muted loop>
+                        <source src="img/p10.mp4" type="video/mp4">
+                        <!-- Mensaje para navegadores que no soportan el elemento <video> -->
+                        Tu navegador no soporta el elemento de video.
+                    </video>
+                    <div class="overlay">
+                        <h3>Control productos Tienda</h3><br>
+                        <a href="https://github.com/Luiso-o/Flappy_Bird/tree/main" class="enlace" target="_blank">
+                            <p>Creé una Api y una interfaz de usuario para gestionar los productos de una tienda electrónica</p>
+                        </a>
+                        <div class="icons-container">
+                            <img class="icons" src="https://cdn-icons-png.flaticon.com/128/5968/5968282.png" alt="icon java">
+                            <img class="icons" src="https://as2.ftcdn.net/v2/jpg/02/98/41/23/1000_F_298412362_ZNN72WoRPzM2xvGXkEv1A9hdqgBGdB62.jpg" alt="icon java">
+                        </div>
+                    </div>
+                </div>                
             </div>
         </div>
     </section>
